--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ He will take great delight in you;
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/icon.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <script src="js/p5.min.js"></script>
 
@@ -59,7 +60,7 @@ He will take great delight in you;
       <!--  HEADER -->
       <div class="container header" style="padding-top: 30px">
         <!--  TITLE BOX-->
-        <div class="row" style="float:left; width: 325px">
+        <div class="row animated bounceInLeft" style="float:left; width: 325px">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
             <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
@@ -90,7 +91,7 @@ He will take great delight in you;
 
         </div> <!-- END OF TITLE BOX ROW -->
         <div style="float:right;position:relative">
-          <ul class="soc">
+          <ul class="soc animated bounceInRight">
               <!-- <li><a class="soc-email2" href="mailto:byunkaram@gmail.com"></a></li> -->
               <li><a class="soc-linkedin" href="http://www.linkedin.com/in/karambyun"></a></li>
               <li><a class="soc-twitter" href="https://twitter.com/crzikrn/media"></a></li>
@@ -107,7 +108,7 @@ He will take great delight in you;
           <div class="row">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
+          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 animated fadeInLeft ">
             <!-- category title -->
             <div class="category title">
               <h4>CODING</h4>
@@ -116,6 +117,22 @@ He will take great delight in you;
             </div>
 
             <!-- ONE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, TEXT ANALYSIS</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+            <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+            </div>
+            <!-- description -->
+            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="divine.html"> More>></a></span></p>
+            <!-- button -->
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+            <hr>
+
+            <!-- TWO -->
             <!-- project title -->
             <h5><em><a class="link" href="digi.html">REPRESENTATIONS OF US</a></em></h5>
             <!-- project image -->
@@ -129,21 +146,7 @@ He will take great delight in you;
             <!-- break -->
             <br>
             <hr>
-            <!-- TWO -->
-            <!-- project title -->
-            <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, TEXT ANALYSIS</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
-              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
-            </div>
-            <!-- description -->
-            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="divine.html"> More>></a></span></p>
-            <!-- button -->
-            <div class="more button"></div>
-            <!-- break -->
-            <br>
-            <hr>
+
             <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
@@ -159,7 +162,98 @@ He will take great delight in you;
           </div>
 
           <!--  NEWS STRIP 2 -->
-          <div class="col-sm-3 hidden-md col-lg-3 col-xs-12">
+          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 animated fadeInUp">
+            <!-- category title -->
+            <div class="category title">
+              <h4>MULTIMEDIA</h4>
+              <hr>
+              <h3></h3>
+            </div>
+            <!-- ONE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="typo.html">GRAPHIC DESIGN</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
+            </div>
+            <!-- project description -->
+            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
+            <div class="more button">
+
+            </div>
+            <!-- break -->
+            <br>
+            <hr>
+            <!-- TWO -->
+            <!-- project title -->
+            <h5><em><a class="link" href="videolab.html">MEDIA TEST LAB</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="videolab.html"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+            </div>
+            <!-- description -->
+            <p>Collection of video uploads in coding and physical computing experiment tests, motion graphics, and media design. <span id="more"><a href="videolab.html"> More>></a></span></p>
+            <!-- button -->
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+            <hr>
+
+            <!-- THREE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="carni.html">SKETCHES</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="sketches.html"><img src="image/sketch_des_05.jpg" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/carni_01.png" class="img-responsive img-circle"></a> -->
+            </div>
+            <!-- description -->
+            <p>Design sketch iterations and ideas sketches on notebooks. <span id="more"><a href="sketches.html">More>></a></span></p>
+            <!-- button -->
+            <div class="more button">
+            </div>
+          </div>
+
+          <!--  NEWS STRIP 3-->
+          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 animated fadeInDown">
+            <!-- category title -->
+            <div class="category title">
+              <h4>INSTALLATION/ FABRICATION</h4>
+              <hr>
+              <h3></h3>
+            </div>
+            <!-- TWO -->
+            <!-- project title -->
+            <h5><em><a class="link" href="soundscape.html">SOUNDSCAPE TOY</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="soundscape.html"><img src="image/sound_00.jpg" class="img-responsive img-circle"></a>
+            </div>
+            <!-- project description -->
+            <p>An educational toy, that creates music through the landscapes you create with it. Each box side is a switch that triggers different musical cues. <span id="more"><a href="soundscape.html">More>></a></span></p>
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+            <hr>
+            <!-- ONE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="divine.html">MEDIA ART ON THE DIVINE</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="divine.html"><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
+            </div>
+            <!-- project description -->
+            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object. <span id="more"><a href="divine.html">More>></a></span></p>
+            <div class="more button"></div>
+
+
+
+          </div> <!-- END OF NEWS STRIP 3--->
+
+
+          <!--  NEWS STRIP 4 -->
+          <div class="col-sm-3 hidden-md col-lg-3 col-xs-12 animated fadeInRight">
             <!-- category title -->
             <div class="category title">
               <h4>HACKING JOURNALISM</h4>
@@ -213,94 +307,7 @@ He will take great delight in you;
             </div>
           </div>
 
-          <!--  NEWS STRIP 3-->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
-            <!-- category title -->
-            <div class="category title">
-              <h4>INSTALLATION/FABRICATION</h4>
-              <hr>
-              <h3></h3>
-            </div>
-            <!-- TWO -->
-            <!-- project title -->
-            <h5><em><a class="link" href="soundscape.html">SOUNDSCAPE TOY</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="soundscape.html"><img src="image/sound_00.jpg" class="img-responsive img-circle"></a>
-            </div>
-            <!-- project description -->
-            <p>An educational toy, that creates music through the landscapes you create with it. Each box side is a switch that triggers different musical cues. <span id="more"><a href="soundscape.html">More>></a></span></p>
-            <div class="more button"></div>
-            <!-- break -->
-            <br>
-            <hr>
-            <!-- ONE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="divine.html">MEDIA ART ON THE DIVINE</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="divine.html"><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
-            </div>
-            <!-- project description -->
-            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object. <span id="more"><a href="divine.html">More>></a></span></p>
-            <div class="more button"></div>
 
-
-
-          </div> <!-- END OF NEWS STRIP 3--->
-
-
-          <!--  NEWS STRIP 4 -->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
-            <!-- category title -->
-            <div class="category title">
-              <h4>MULTIMEDIA</h4>
-              <hr>
-              <h3></h3>
-            </div>
-            <!-- ONE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="videolab.html">MEDIA TEST LAB</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="videolab.html"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
-              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
-            </div>
-            <!-- description -->
-            <p>Collection of video uploads in coding and physical computing experiment tests, motion graphics, and media design. <span id="more"><a href="videolab.html"> More>></a></span></p>
-            <!-- button -->
-            <div class="more button"></div>
-            <!-- break -->
-            <br>
-            <hr>
-            <!-- TWO -->
-            <!-- project title -->
-            <h5><em><a class="link" href="typo.html">TYPOGRAPHY</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
-            </div>
-            <!-- project description -->
-            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
-            <div class="more button">
-
-            </div>
-            <!-- break -->
-            <br>
-            <hr>
-            <!-- THREE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="carni.html">SKETCHES</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="sketches.html"><img src="image/sketch_des_05.jpg" class="img-responsive img-circle"></a>
-              <!-- <a href=""><img src="image/carni_01.png" class="img-responsive img-circle"></a> -->
-            </div>
-            <!-- description -->
-            <p>Design sketch iterations and ideas sketches on notebooks. <span id="more"><a href="sketches.html">More>></a></span></p>
-            <!-- button -->
-            <div class="more button">
-            </div>
 
         </div> <!--  END OF PORTFOLIO ROW-->
       </div> <!--  END OF CONTENT MAIN PART -->
