--- a/hamlet.html
+++ b/hamlet.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/p5.min.js"></script>
     <script type="text/javascript" src="js/p5.dom.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
-    <script type="text/javascript" src="sketch1.js"></script>
+    <!-- <script type="text/javascript" src="sketch1.js"></script> -->
     <!-- <script language="javascript" type="text/javascript" src="js/dropzone.js"></script> -->
 
 
@@ -158,9 +158,9 @@
             <h5><strong>Hamlet</strong></h5>
             <div id="text"></div>
             <br>
-            <h5><strong>King Lear</strong></h5>
+            <!-- <h5><strong>King Lear</strong></h5>
             <div id="kinglear"></div>
-            <br>
+            <br> -->
             <p><em>List of first 12 words</em></p>
             <div id="token"></div>
             <!-- <div id="text"> container for p5</div> -->
