--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ He will take great delight in you;
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
-            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="divine.html"> More>></a></span></p>
+            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="hamlet.html"> More>></a></span></p>
             <!-- button -->
             <div class="more button"></div>
             <!-- break -->
