--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ He will take great delight in you;
           <div class="row">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 animated fadeInLeft ">
+          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 wow animated fadeInLeft">
             <!-- category title -->
             <div class="category title">
               <h4>CODING</h4>
@@ -117,52 +117,58 @@ He will take great delight in you;
             </div>
 
             <!-- ONE -->
+            <div class="">
             <!-- project title -->
-            <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, TEXT ANALYSIS</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-            <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
-              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+              <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, TEXT ANALYSIS</a></em></h5>
+              <h6>JAVASCRIPT, P5 LIBRARY, CONCORDANCE, CREATIVE CODING</h6>
+              <!-- project image -->
+              <div class="image">
+              <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
+                <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+              </div>
+              <!-- description -->
+              <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="hamlet.html"> More>></a></span></p>
+              <!-- button -->
+              <div class="more button"></div>
+              <!-- break -->
+              <br>
+              <hr>
             </div>
-            <!-- description -->
-            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="hamlet.html"> More>></a></span></p>
-            <!-- button -->
-            <div class="more button"></div>
-            <!-- break -->
-            <br>
-            <hr>
-
             <!-- TWO -->
+            <div >
             <!-- project title -->
-            <h5><em><a class="link" href="digi.html">REPRESENTATIONS OF US</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="digi.html"><img src="image/dian_03.png" class="img-responsive img-circle"></a>
+              <h5><em><a class="link" href="digi.html">REPRESENTATIONS OF US</a></em></h5>
+              <h6>OPENCV, FACE DETECTION, PROCESSING, CREATIVE CODING</h6>
+              <!-- project image -->
+              <div class="image">
+                <a href="digi.html"><img src="image/dian_03.png" class="img-responsive img-circle"></a>
+              </div>
+              <!-- description -->
+              <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
+              <!-- button -->
+              <div class="more button"></div>
+              <!-- break -->
+              <br>
+              <hr>
             </div>
-            <!-- description -->
-            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
-            <!-- button -->
-            <div class="more button"></div>
-            <!-- break -->
-            <br>
-            <hr>
-
             <!-- THREE -->
+            <div >
             <!-- project title -->
-            <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="archi.html"><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
+              <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
+              <h6>3D CAMERA, PROCESSING, CREATIVE CODING, GRAPHIC DESIGN</h6>
+              <!-- project image -->
+              <div class="image">
+                <a href="archi.html"><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
+              </div>
+              <!-- description -->
+              <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. <span id="more"><a href="archi.html">More>></a></span></p>
+              <!-- button -->
+              <div class="more button"></div>
             </div>
-            <!-- description -->
-            <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. <span id="more"><a href="archi.html">More>></a></span></p>
-            <!-- button -->
-            <div class="more button"></div>
-
           </div>
 
           <!--  NEWS STRIP 2 -->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 animated fadeInUp">
+          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 wow animated fadeInUp" data-wow-delay="0.1s">
             <!-- category title -->
             <div class="category title">
               <h4>MULTIMEDIA</h4>
@@ -170,23 +176,27 @@ He will take great delight in you;
               <h3></h3>
             </div>
             <!-- ONE -->
+            <div  >
             <!-- project title -->
-            <h5><em><a class="link" href="typo.html">GRAPHIC DESIGN</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
-            </div>
-            <!-- project description -->
-            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
-            <div class="more button">
+              <h5><em><a class="link" href="typo.html">GRAPHIC DESIGN</a></em></h5>
+              <h6>DATA VISUALIZATION, LAYOUT DESIGN, LOGO, SLIDES </h6>
+              <!-- project image -->
+              <div class="image">
+                <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
+              </div>
+              <!-- project description -->
+              <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
+              <div class="more button">
 
+              </div>
+              <!-- break -->
+              <br>
+              <hr>
             </div>
-            <!-- break -->
-            <br>
-            <hr>
             <!-- TWO -->
             <!-- project title -->
             <h5><em><a class="link" href="videolab.html">MEDIA TEST LAB</a></em></h5>
+            <h6>KINECT, ARDUINO, MOTION GRAPHICS, VIDEO EDITING</h6>
             <!-- project image -->
             <div class="image">
               <a href="videolab.html"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
@@ -203,6 +213,7 @@ He will take great delight in you;
             <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="carni.html">SKETCHES</a></em></h5>
+            <h6>UI SKETCH, BRAINSTORMING</h6>
             <!-- project image -->
             <div class="image">
               <a href="sketches.html"><img src="image/sketch_des_05.jpg" class="img-responsive img-circle"></a>
@@ -216,7 +227,7 @@ He will take great delight in you;
           </div>
 
           <!--  NEWS STRIP 3-->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 animated fadeInDown">
+          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12 wow animated fadeInDown" data-wow-delay="0.2s">
             <!-- category title -->
             <div class="category title">
               <h4>INSTALLATION/ FABRICATION</h4>
@@ -226,6 +237,7 @@ He will take great delight in you;
             <!-- TWO -->
             <!-- project title -->
             <h5><em><a class="link" href="soundscape.html">SOUNDSCAPE TOY</a></em></h5>
+            <h6>ARDUINO, ALGORITHM, COMPUTER SYSTEMS, PHYSICAL COMPUTING</h6>
             <!-- project image -->
             <div class="image">
               <a href="soundscape.html"><img src="image/sound_00.jpg" class="img-responsive img-circle"></a>
@@ -236,9 +248,10 @@ He will take great delight in you;
             <!-- break -->
             <br>
             <hr>
-            <!-- ONE -->
+            <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="divine.html">MEDIA ART ON THE DIVINE</a></em></h5>
+            <h6>PROJECTION MAPPING, NEW MEDIA, ARCHITECTURAL SKETCHES </h6>
             <!-- project image -->
             <div class="image">
               <a href="divine.html"><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
@@ -253,7 +266,7 @@ He will take great delight in you;
 
 
           <!--  NEWS STRIP 4 -->
-          <div class="col-sm-3 hidden-md col-lg-3 col-xs-12 animated fadeInRight">
+          <div class="col-sm-3 hidden-md col-lg-3 col-xs-12 wow animated fadeInRight" data-wow-delay="0.1s" >
             <!-- category title -->
             <div class="category title">
               <h4>HACKING JOURNALISM</h4>
@@ -263,7 +276,27 @@ He will take great delight in you;
 
             <!-- ONE -->
             <!-- project title -->
+            <h5><em><a class="link" href="data_analysis.html">DON'T SUPPORT PUNISH</a></em></h5>
+            <h6>FRONT-END, HTML, CSS, JAVASCRIPT, CAMPAIGN</h6>
+            <!-- project image -->
+            <div class="image">
+              <a href="http://crzikrn.github.io/dontpunish"><img src="image/web_01.png" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+            </div>
+            <!-- description -->
+            <p>Single Website Promotion for the public. A campaign for Don't Support Punish, with Clock Counters for datasets.
+              <span id="more"><a href="http://crzikrn.github.io/dontpunish">
+                More>></a></span> </p>
+            <!-- button -->
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+            <hr>
+
+            <!-- TWO -->
+            <!-- project title -->
             <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES ANALYSIS</a></em></h5>
+            <h6>DATA ANALYSIS, DATA VISUALIZATIONS, DATA STORY </h6>
             <!-- project image -->
             <div class="image">
               <a href="data_analysis.html"><img src="image/data_0A.png" class="img-responsive img-circle"></a>
@@ -276,9 +309,10 @@ He will take great delight in you;
             <!-- break -->
             <br>
             <hr>
-            <!-- TWO -->
+            <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="listening.html">I'M LISTENING</a></em></h5>
+            <h6>VOICE RECOGNITION, TWILIO, THESIS, HOMELESS, STORY</h6>
             <!-- project image -->
             <div class="image">
               <a href="listening.html"><img src="image/listen_22.jpg" class="img-responsive img-circle"></a>
@@ -292,9 +326,10 @@ He will take great delight in you;
             <!-- break -->
             <br>
             <hr>
-            <!-- THREE -->
+            <!-- FOUR -->
             <!-- project title -->
             <h5><em><a class="link" href="carni.html">CARNISSEUR™ AFTERMATH</a></em></h5>
+            <h6>PATENTS, DESIGN RESEARCH, CRITICAL DESIGN</h6>
             <!-- project image -->
             <div class="image">
               <a href="carni.html"><img src="image/carni_0A.jpg" class="img-responsive img-circle"></a>
@@ -322,6 +357,9 @@ He will take great delight in you;
           <p>©2016 Karam Byun</p>
         </div>
       </div>
+
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script> new WOW().init(); </script>
   </body>
 </html>
