--- a/typo.html
+++ b/typo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
@@ -83,7 +84,7 @@
         <div class="row">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
+          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 animated bounceInLeft">
             <!-- category title -->
             <div class="category title" style="">
               <h4>MULTIMEDIA <a href="index.html"><</a> </h4>
@@ -113,7 +114,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInRight">
             <!-- category title -->
             <div class="category title">
               <h4>TYPOGRAPHY</h4>
@@ -131,22 +132,24 @@
               <div class="col-md-6">
                 <h4>Name Branding/ Logo </h4>
                 <hr>
-                <a href="image/typo_01.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo"><img src="image/typo_01.jpg" class="img-responsive"></a>
+                <a href="image/typo_01.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                  <img src="image/typo_01.jpg" class="img-responsive wow animated fadeInUp"></a>
 
                 <h4>Typography Poster</h4>
                 <hr>
-                <a href="image/typo_02.jpg" data-lightbox="typo-box" data-title="Typography Justice"><img src="image/typo_02.jpg" class="img-responsive"></a>
+                <a href="image/typo_02.jpg" data-lightbox="typo-box" data-title="Typography Justice">
+                  <img src="image/typo_02.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <!-- <img src="image/data_03.png" class="img-responsive"> -->
               </div>
               <div class="col-md-6">
                 <h4>Article Page Design</h4>
                 <hr>
                 <a href="image/typo_03.jpg" data-lightbox="typo-box" data-title="Article Design">
-                  <img src="image/typo_03.jpg" class="img-responsive">
+                  <img src="image/typo_03.jpg" class="img-responsive  wow animated fadeInUp">
                 </a>
                 <h4>Slides for teaching at Mongolia</h4>
                 <hr><a href="image/typo_04.jpg" data-lightbox="typo-box" data-title="Slides">
-                <img src="image/typo_04.jpg" class="img-responsive"></a>
+                <img src="image/typo_04.jpg" class="img-responsive  wow animated fadeInUp"></a>
                 <p></p>
               </div>
 
@@ -155,46 +158,46 @@
                 <h4>Typography Poster</h4>
                 <hr>
                 <a href="image/typo_05.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
-                  <img src="image/typo_05.png" class="img-responsive"></a>
+                  <img src="image/typo_05.png" class="img-responsive wow animated fadeInUp"></a>
                 <hr>
                 <a href="image/typo_06.jpg" data-lightbox="typo-box" data-title="Typography Justice">
-                  <img src="image/typo_06.jpg" class="img-responsive"></a>
+                  <img src="image/typo_06.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <hr>
                 <a href="image/typo_10.jpg" data-lightbox="typo-box" data-title="Typography Justice">
-                  <img src="image/typo_10.jpg" class="img-responsive"></a>
+                  <img src="image/typo_10.jpg" class="img-responsive  wow animated fadeInUp"></a>
               </div>
               <div class="col-md-4">
                 <h4>App Icon Design</h4>
                 <hr>
                 <a href="image/typo_07.jpg" data-lightbox="typo-box" data-title="Article Design">
-                  <img src="image/typo_07.jpg" class="img-responsive">
+                  <img src="image/typo_07.jpg" class="img-responsive  wow animated fadeInUp">
                 </a>
                 <hr><a href="image/typo_08.jpg" data-lightbox="typo-box" data-title="Slides">
-                <img src="image/typo_08.jpg" class="img-responsive"></a>
+                <img src="image/typo_08.jpg" class="img-responsive  wow animated fadeInUp"></a>
                 <h4>Social Media Post Design</h4>
                 <a href="image/typo_14.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
-                  <img src="image/typo_14.jpg" class="img-responsive"></a>
+                  <img src="image/typo_14.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/typo_15.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
-                  <img src="image/typo_15.jpg" class="img-responsive"></a>
+                  <img src="image/typo_15.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/typo_16.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
-                <img src="image/typo_16.jpg" class="img-responsive"></a>
+                <img src="image/typo_16.jpg" class="img-responsive  wow animated fadeInUp"></a>
               </div>
 
 
-              <div class="col-md-4">
+              <div class="col-md-4 wow animated fadeInUp">
                 <h4>Data Visualization</h4>
                 <hr>
                 <a href="image/typo_11.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
-                  <img src="image/typo_11.png" class="img-responsive"></a>
+                  <img src="image/typo_11.png" class="img-responsive wow animated fadeInUp"></a>
                 <hr>
                 <a href="image/typo_12.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
-                  <img src="image/typo_12.png" class="img-responsive"></a>
+                  <img src="image/typo_12.png" class="img-responsive wow animated fadeInUp"></a>
               </div>
               <div class="col-md-4">
                 <h4>Article Layout Design </h4>
                 <hr>
                 <a href="image/typo_09.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
-                  <img src="image/typo_09.jpg" class="img-responsive"></a>
+                  <img src="image/typo_09.jpg" class="img-responsive wow animated fadeInUp"></a>
               </div>
             </div>
             <!-- project description -->
@@ -218,6 +221,8 @@
       </div>
     </div>
     <script src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script> new WOW().init(); </script>
       <script>
         lightbox.option({
           'resizeDuration': 200,
