--- a/typo.html
+++ b/typo.html
@@ -107,8 +107,8 @@
             2010-2015</p>
 
             <div style="text-align: center;">
-              <a href="videolab.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="sketches.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="archi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="videolab.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
