--- a/listening.html
+++ b/listening.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
     <title>BYUNNNN</title>
@@ -82,7 +83,7 @@
         <div class="row">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
+          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 animated bounceInLeft">
             <!-- category title -->
             <div class="category title" style="">
               <h4>HACKING JOURNALISM <a href="index.html"><</a> </h4>
@@ -111,7 +112,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInRight">
             <!-- category title -->
             <div class="category title">
               <h4>I'M LISTENING</h4>
