update animation & links

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ He will take great delight in you;
 
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="data_analysis.html">DON'T SUPPORT PUNISH</a></em></h5>
+            <h5><em><a class="link" href="http://crzikrn.github.io/dontpunish">DON'T SUPPORT PUNISH</a></em></h5>
             <h6>FRONT-END, HTML, CSS, JAVASCRIPT, CAMPAIGN</h6>
             <!-- project image -->
             <div class="image">
