--- a/hamlet.html
+++ b/hamlet.html
@@ -140,20 +140,79 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of Hamlet & King Lear text analysis.</p>
+            <div class="col-sm-6 col-md-8 col-lg-8 col-xs-12">
+              <h1>We long for immortality. Because we cherish the moments with our close ones.</h1>
+              <p>
+                We all say good bye to loved ones at least once in our lifetime.
+                And we hope to have the power to see them once more.
+                We fear death, yet we challenge it.
+                The idea of immortality to us is a deep desire we own in our hearts.
+                This is about immortality in the sense we admire those who linger on even after death.
+                Shakespeare's creativity has long lived passed his days.
+                And how was it able to survive?
+                This is not only about understanding creativity of Shakespeare through the words he uses
+                ,but also about what creates immortality.
+              </p>
+              <p>
+                Featured on the right and on the bottom is a interactive data graph of Shakespeare's Hamlet text analysis.
+                The height( or width in the canvas) of the image is the lenght of the book from beginning to end.
+                These are page numbers of the book where the top is page 1, and the bottom the last page.
+                The lcoation of ellipses are words detected for the first time in the book.
+                The size of the ellipses are the concordance data, meaning the frequency of the word.
+                It correlates to the number of times the word has appeared throughout the story.
+                And finally the colors depict a ranking system I created for the detected words.
+                <br><br>
+                Plainly speaking, I was counting number of words appearing in the text.
+                And soon I found out that He had 3 categories.
+                Low-Range, Mid-Range, High-Range.
+                <br><br>
+                High-Range word occurence were prepositions like <em>the, a, on, and, as, so, in, of</em> and so on.
+                All these common words appeared in the beginning of the book.
+                And that is why you see large pink ellipses at the top of the image.
+                <br><br>
+                Mid-Range word occurences were usually character names or places.
+                The main character's names would appear at the top.
+                And you would have one liner characters or exotic places appear in the middle or almost at the end also.
+                These are the green ellipses, they are less frequent, but definitely you are able to see the differences
+                between a main character and a side character.
+                <br><br>
+                The last category the Low-Range words were fascinating.
+                As they appear all through out the book. And I wondered what this was.
+                Why were there new words appearing through out the whole book?
+                And realized this is where Shakespeare impressed the world.
+                These are mostly words that are invented to express situations and emotions.
+                I don't know much about Shakespeare, but I've heard he invented a lot of words.
+                Perhaps this is what the data visualization is showing us.
+                <strong>He's undying creativity.</strong>
+              </p>
 
-            <p>I was curious about the words that Shakespeare used in the mid-range, not to common and not to eccentric. What were the words Shakespeare used commonly through out his stories? Could be a topic that I might involve myself for the rest of the half semester. Not only him but for any writer. The width of the canvas is the length of the book from beginning to end. The location of the ellipses are the initial appearance of the word itself. The size is correlates to the number of times the word has appeared throughout the story. Most of his single to twenty appearance words newly appear all through out the book, while the words he uses the most he shows them off right at the beginning ( like the, as, and those type of words/pronouns). Meaning throughout the book Shakepeare introduces new words until the end. That is a writer with creativity.</p>
+              <h1>The data art re-created is Shakepeare's own use of Spatial typography between words.</h1>
+              <p>
+                Throughout the book Shakepeare introduces new words until the end.
+                This is a writer with creativity and an unending appetite to strongly express his story.
+                Immortality comes from an unending appetite.
+                And the data art re-created is Shakepeare's own use of Spatial typography between words.
+                It's his working mind that incessantly lives with us today, and still inpires us.
+              </p>
+              <!-- <p>
+                A side project I did while studying shakespeare, a shakepeare bot!
+                Now inactive, but still checkout it's eloquent dialogues mix matching his works together.
+                <span id="more">
+                  <a href="https://twitter.com/Shakespearbot">
+                    https://twitter.com/Shakespearbot
+                  </a>
+                </span>
+              </p> -->
+          </div>
 
-            <p>A side project I did while studying shakespeare, a shakepeare bot! Now inactive, but still checkout it's eloquent dialogues mix matching his works together. <span id="more"><a href="https://twitter.com/Shakespearbot">https://twitter.com/Shakespearbot</a></span></p>
-
-            <hr>
             <!-- project image -->
             <div class="image">
-              <div class="col-md-12">
-                <!-- <a href="image/hamlet_01.png" data-lightbox="graf-box"><img src="image/hamlet_01.png" class="img-responsive"></a> -->
+              <div class="col-sm-6 col-md-4 col-lg-4 hidden-xs">
+                <a href="image/hamlet_01.png" data-lightbox="graf-box"><img src="image/hamlet_01.png" class="img-responsive"></a>
 
               </div>
             </div>
+            <hr>
             <!-- project description -->
             <h5><em> Drag the mouse to change size of ellipse.</em></h5>
             <h5><strong>Hamlet</strong></h5>
