--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ He will take great delight in you;
             <div class="">
             <!-- project title -->
               <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, TEXT ANALYSIS</a></em></h5>
-              <h6>JAVASCRIPT, P5 LIBRARY, CONCORDANCE, CREATIVE CODING</h6>
+              <h6>DATA VISUALIZATION, JAVASCRIPT, P5 LIBRARY, CONCORDANCE, CREATIVE CODING</h6>
               <!-- project image -->
               <div class="image">
               <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
